tests/lean/793b.lean
check 1.2
